--- a/09_Time_Series/Apple_Stock/Exercises.ipynb
+++ b/09_Time_Series/Apple_Stock/Exercises.ipynb
@@ -21,12 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,12 +55,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-08</td>\n",
+       "      <td>96.27</td>\n",
+       "      <td>96.80</td>\n",
+       "      <td>93.92</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>65130000</td>\n",
+       "      <td>95.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-07-07</td>\n",
+       "      <td>94.14</td>\n",
+       "      <td>95.99</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>56305400</td>\n",
+       "      <td>95.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-07-03</td>\n",
+       "      <td>93.67</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>93.20</td>\n",
+       "      <td>94.03</td>\n",
+       "      <td>22891800</td>\n",
+       "      <td>94.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-07-02</td>\n",
+       "      <td>93.87</td>\n",
+       "      <td>94.06</td>\n",
+       "      <td>93.09</td>\n",
+       "      <td>93.48</td>\n",
+       "      <td>28420900</td>\n",
+       "      <td>93.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-07-01</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>93.13</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>38170200</td>\n",
+       "      <td>93.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date   Open   High    Low  Close    Volume  Adj Close\n",
+       "0  2014-07-08  96.27  96.80  93.92  95.35  65130000      95.35\n",
+       "1  2014-07-07  94.14  95.99  94.10  95.97  56305400      95.97\n",
+       "2  2014-07-03  93.67  94.10  93.20  94.03  22891800      94.03\n",
+       "3  2014-07-02  93.87  94.06  93.09  93.48  28420900      93.48\n",
+       "4  2014-07-01  93.52  94.07  93.13  93.52  38170200      93.52"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://raw.githubusercontent.com/guipsamora/pandas_exercises/master/09_Time_Series/Apple_Stock/appl_1980_2014.csv'\n",
+    "ticks = pd.read_csv(url)\n",
+    "ticks.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,12 +174,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date          object\n",
+       "Open         float64\n",
+       "High         float64\n",
+       "Low          float64\n",
+       "Close        float64\n",
+       "Volume         int64\n",
+       "Adj Close    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticks.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,12 +210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date         datetime64[ns]\n",
+       "Open                float64\n",
+       "High                float64\n",
+       "Low                 float64\n",
+       "Close               float64\n",
+       "Volume                int64\n",
+       "Adj Close           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticks.Date = pd.to_datetime(ticks.Date)\n",
+    "ticks.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +247,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-07-08</th>\n",
+       "      <td>96.27</td>\n",
+       "      <td>96.80</td>\n",
+       "      <td>93.92</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>65130000</td>\n",
+       "      <td>95.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-07</th>\n",
+       "      <td>94.14</td>\n",
+       "      <td>95.99</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>56305400</td>\n",
+       "      <td>95.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-03</th>\n",
+       "      <td>93.67</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>93.20</td>\n",
+       "      <td>94.03</td>\n",
+       "      <td>22891800</td>\n",
+       "      <td>94.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-02</th>\n",
+       "      <td>93.87</td>\n",
+       "      <td>94.06</td>\n",
+       "      <td>93.09</td>\n",
+       "      <td>93.48</td>\n",
+       "      <td>28420900</td>\n",
+       "      <td>93.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-01</th>\n",
+       "      <td>93.52</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>93.13</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>38170200</td>\n",
+       "      <td>93.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High    Low  Close    Volume  Adj Close\n",
+       "Date                                                       \n",
+       "2014-07-08  96.27  96.80  93.92  95.35  65130000      95.35\n",
+       "2014-07-07  94.14  95.99  94.10  95.97  56305400      95.97\n",
+       "2014-07-03  93.67  94.10  93.20  94.03  22891800      94.03\n",
+       "2014-07-02  93.87  94.06  93.09  93.48  28420900      93.48\n",
+       "2014-07-01  93.52  94.07  93.13  93.52  38170200      93.52"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticks = ticks.set_index('Date')\n",
+    "ticks.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +369,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticks.index.is_unique"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,12 +398,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-12-12</th>\n",
+       "      <td>28.75</td>\n",
+       "      <td>28.87</td>\n",
+       "      <td>28.75</td>\n",
+       "      <td>28.75</td>\n",
+       "      <td>117258400</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-15</th>\n",
+       "      <td>27.38</td>\n",
+       "      <td>27.38</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>43971200</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-16</th>\n",
+       "      <td>25.37</td>\n",
+       "      <td>25.37</td>\n",
+       "      <td>25.25</td>\n",
+       "      <td>25.25</td>\n",
+       "      <td>26432000</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-17</th>\n",
+       "      <td>25.87</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>25.87</td>\n",
+       "      <td>25.87</td>\n",
+       "      <td>21610400</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-18</th>\n",
+       "      <td>26.63</td>\n",
+       "      <td>26.75</td>\n",
+       "      <td>26.63</td>\n",
+       "      <td>26.63</td>\n",
+       "      <td>18362400</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High    Low  Close     Volume  Adj Close\n",
+       "Date                                                        \n",
+       "1980-12-12  28.75  28.87  28.75  28.75  117258400       0.45\n",
+       "1980-12-15  27.38  27.38  27.25  27.25   43971200       0.42\n",
+       "1980-12-16  25.37  25.37  25.25  25.25   26432000       0.39\n",
+       "1980-12-17  25.87  26.00  25.87  25.87   21610400       0.40\n",
+       "1980-12-18  26.63  26.75  26.63  26.63   18362400       0.41"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticks.sort_index(ascending=True).head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,21 +594,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "ml-env",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
